@@ -14,6 +14,7 @@ import javax.servlet.http.*;
 import javax.swing.text.Utilities;
 import javax.servlet.annotation.WebServlet;
 
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -24,6 +25,7 @@ import etu1767.framework.Mapping;
 import etu1767.framework.FileUpload;
 import etu1767.framework.ModelView;
 import etu1767.framework.PathUpload;
+import etu1767.framework.Scope;
 import etu1767.framework.Url;
 import etu1767.framework.Arguments;
 import etu1767.framework.Utils;
@@ -32,6 +34,7 @@ import etu1767.framework.Utils;
 public class FrontServlet extends HttpServlet {
     HashMap<String, Mapping> mappingUrls;
     String nomDePackage;
+    HashMap<Class, Object> singletons = new HashMap<>();
     protected void processRequest(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
         response.setContentType("text/html;charset=UTF-8");
@@ -42,17 +45,30 @@ public class FrontServlet extends HttpServlet {
 
             
             Mapping map = this.getMapping(request);
-            Object obj = Class.forName(map.getClassName()).newInstance();
+            Class classe = Class.forName(map.getClassName());
+
+            System.out.println(classe + " classe " + getSingletons().size());
+            Object obj = null;
+            if(this.getSingletons().containsKey(classe)){
+                obj = this.getSingletons().get(classe);
+                revenirANull(obj);
+                System.out.println("PAS BESOIN DE NOUVELLE INSTANCE");
+            }else{
+                obj = classe.getDeclaredConstructor().newInstance();
+                System.out.println("VRAIMENT BESOIN DE NOUVELLE INSTANCE");
+            }
+            System.out.println(obj + " ADRESSEE");
             sendData(request, obj);
 
             Method method = getMethod(map, obj);
             ModelView modelView = (ModelView) getModelView(request, map, obj);
-            addData(request, modelView);
-            RequestDispatcher dispat = request.getRequestDispatcher(modelView.getVueRedirection());
 
-            System.out.println(modelView.getVueRedirection() + " VUE DE REDIRECTION");
-
-            dispat.forward(request, response);
+                addData(request, modelView);
+                RequestDispatcher dispat = request.getRequestDispatcher(modelView.getVueRedirection());
+    
+                System.out.println(modelView.getVueRedirection() + " VUE DE REDIRECTION");
+    
+                dispat.forward(request, response);
 
         } catch (Exception e) {
             out.println(e.getMessage() + "\n");
@@ -63,7 +79,6 @@ public class FrontServlet extends HttpServlet {
     public void addData(HttpServletRequest request, ModelView modelView) {
         Map<String, String[]> donneesJSP;
         if (request.getParameterMap() != null && !request.getParameterMap().isEmpty()) {
-            System.out.println("NILA ARGUMENTS");
             donneesJSP = request.getParameterMap();
 
             // out.println(donneesJSP.toString() + " donneesJSP");
@@ -73,7 +88,6 @@ public class FrontServlet extends HttpServlet {
                 modelView.addItem(parameterName, donneesJSP.get(parameterName)[0]);
             }
         } else {
-            System.out.println("TSY NILA ARGUMENTS");
         }
         for (Map.Entry<String, Object> obj : modelView.getData().entrySet()) {
             request.setAttribute(obj.getKey(), obj.getValue());
@@ -87,9 +101,7 @@ public class FrontServlet extends HttpServlet {
             String value = field.getName();
             if(multiPartFormDataContentType(request)){
             if (value != null) {
-                    System.out.println("TSY NULLLL" + value + " ITOO" + obj.getClass());
                     if(field.getType().getSimpleName().equalsIgnoreCase("FileUpload") == true){
-                        System.out.println("THERE IS A FILE TO UPLOAD");
                         try {
                             System.out.println("THERE IS A FILE TO UPLOAD TAFIDITRAAAAAAAAAAAA");
                             Part filePart=request.getPart(value);
@@ -111,7 +123,6 @@ public class FrontServlet extends HttpServlet {
                             throw new Exception("Verifier si vous avez bien télécharger quelque chose");
                         }
                     }else{
-                        System.out.println("THIS IS NOT A FILE TO UPLOAD" + value);
                         String valeur = request.getParameter(field.getName());
                         Class castValue = (Class<?>) field.getType();
                         field.set(obj, Utils.cast(valeur, castValue));
@@ -121,6 +132,50 @@ public class FrontServlet extends HttpServlet {
         }
     }
 
+    public void revenirANull(Object object) {
+        try {
+            Field[] fields = object.getClass().getDeclaredFields();
+            Object objectNull = new Object();
+            
+            for (Field field : fields) {
+                // Obtenir le nom du champ
+                String fieldName = field.getName();
+                
+                // Convertir le nom du champ en nom de méthode de setter
+                String setterName = "set" + fieldName.substring(0, 1).toUpperCase() + fieldName.substring(1);
+                System.out.println(setterName + " SETTERNAME");
+                // Obtenir le type du champ
+                Class<?> fieldType = field.getType();
+                List<Class<?>> nonNullableTypes = typesNonNullables();
+                for (int i = 0; i < nonNullableTypes.size(); i++) {
+                    if(fieldType.toString().equalsIgnoreCase(nonNullableTypes.get(i).toString()))
+                    System.out.println("NON NULLABLE" + fieldType);
+                }
+                objectNull = null;
+                // Obtenir la méthode de setter correspondante
+                Method setterMethod = object.getClass().getMethod(setterName, fieldType);
+                System.out.println(setterMethod + " SETTERMETHOD");
+                // Appeler le setter avec la valeur null
+                
+                setterMethod.invoke(object, objectNull);
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+    }
+
+    public List<Class<?>> typesNonNullables(){
+        List<Class<?>> nonNullableTypes = new ArrayList<>();
+        nonNullableTypes.add(boolean.class);
+        nonNullableTypes.add(byte.class);
+        nonNullableTypes.add(short.class);
+        nonNullableTypes.add(int.class);
+        nonNullableTypes.add(long.class);
+        nonNullableTypes.add(float.class);
+        nonNullableTypes.add(double.class);
+        nonNullableTypes.add(char.class);
+        return nonNullableTypes;
+    }
 public static boolean multiPartFormDataContentType(HttpServletRequest request){
     String contentType = request.getContentType();
     if(contentType != null && contentType.startsWith("multipart/form-data")){
@@ -167,7 +222,6 @@ public static boolean multiPartFormDataContentType(HttpServletRequest request){
             Class typeArguments = parameters[i].getType();
             // Avadika string le valeur an le paramètre tany am le méthode
             String value = request.getParameter(listeArguments[i]);
-            System.out.println(typeArguments + " parameters[i].getClass().getSimpleName()parameters[i].getClass().getSimpleName()");
             // Avadika ho le type originaleny amzay le izy aveo
             argumentsDeMethode[i] = Utils.cast(value, typeArguments);
         }
@@ -190,9 +244,19 @@ public static boolean multiPartFormDataContentType(HttpServletRequest request){
 
     public void init() throws ServletException {
         this.setNomDePackage(this.getInitParameter("packageDeScan"));
+        HashMap hash = new HashMap<Class,Object>();
         try {
             System.out.println(this.getNomDePackage() + " nom de package");
             setMappingUrls(Utils.getMethodesAnnotees(this.getNomDePackage(), Url.class));
+            List<Class<?>> classes = Utils.getLesClasses(this.getNomDePackage());
+            for (Class<?> class1 : classes) {
+                Annotation annotation = class1.getAnnotation(Scope.class);
+                    if(annotation != null){
+                        System.out.println(class1 + " ANNOTERRR SCOPPEE");
+                        Object obj = class1.getDeclaredConstructor().newInstance();
+                        singletons.put(class1, obj);
+                    }
+            }
         } catch (ClassNotFoundException ex) {
             Logger.getLogger(FrontServlet.class.getName()).log(Level.SEVERE, null, ex);
         } catch (IOException ex) {
@@ -201,6 +265,8 @@ public static boolean multiPartFormDataContentType(HttpServletRequest request){
             Logger.getLogger(FrontServlet.class.getName()).log(Level.SEVERE, null, ex);
         }
     }
+
+    
 
     protected void doGet(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
@@ -226,6 +292,14 @@ public static boolean multiPartFormDataContentType(HttpServletRequest request){
 
     public void setNomDePackage(String nomDePackage) {
         this.nomDePackage = nomDePackage;
+    }
+
+    public HashMap<Class, Object> getSingletons() {
+        return singletons;
+    }
+
+    public void setSingletons(HashMap<Class, Object> singletons) {
+        this.singletons = singletons;
     }
 
 }
